<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="one">1</string>
    <string name="orderSummary">Order Summary</string>
    <string name="money">₹ 0</string>
    <string name="mailOrder">Mail Order</string>
    <string name="upper_limit">You can not order more than 100</string>
    <string name="lower_limit">You can not order less than 1!</string>
    <string name="customer_name">Name: </string>
    <string name="thank_you">Thank You!!</string>
    <string name="addWhippedCream">Add Whipped Cream?</string>
    <string name="addChocolate">Add Chocolate?</string>
    <string name="quantityreq">Quantity: </string>
    <string name="cost">Total: ₹</string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="subject">Just Java For </string>
</resources>